--- a/parkmap/parkmap.html
+++ b/parkmap/parkmap.html
@@ -255,7 +255,23 @@
                                 </div>
                             </div>
                         </div>
-
+                        <div class="col-md-4 col-sm-4 mt-3 mb-5">
+                            <img src="../img/parkmap/highlight-facility.png" alt="" width="100%">
+                            <p class="font-size-36 Lexend-extra mt-4">DINO GALLERY</p>
+                            <p class="font-size-28">Step into the world of Dinosaurs and enjoy the ultimate combination of fun, excitement and delicious food at Dinopark! Perfect for families and friends.</p>
+                            <div class="row btn-bottom mb-3">
+                                <div class="col-12">
+                                    <svg xmlns="http://www.w3.org/2000/svg" width="100%" height="90" viewBox="0 0 400 90">
+                                        <a xlink:href="dino-gallery.html">
+                                            <g id="button-see_more_drinks-default" data-name="button-see more drinks-default" transform="translate(-1111 -778.615)">
+                                              <rect id="Rectangle_44" data-name="Rectangle 44" width="400" height="90" rx="20" transform="translate(1111 778.615)" fill="#7f7f4e"/>
+                                              <text id="See_more" data-name="See more" transform="translate(1311 835.615)" fill="#fdf3ec" font-size="32" font-family="Lexend" font-weight="600"><tspan x="-75" y="0">See more</tspan></text>
+                                            </g>
+                                        </a>
+                                      </svg>
+                                </div>
+                            </div>
+                        </div>
                     </div>
               
                    
