--- a/aboutus.html
+++ b/aboutus.html
@@ -436,7 +436,7 @@
                         </a>
                     </div>
                 </div>
-                <div class="row mt-4">
+                <!-- <div class="row mt-4">
                     <div class="col-12 text-center">
                         <p class="Skranji head-topic">GET TO KNOW OUR MASCOTS</p>
                     </div>
@@ -470,7 +470,7 @@
                             <p class="Lexend-extra font-size-36">Serena</p>
                         </div>
                     </div>
-                </div>
+                </div> -->
                 <div class="row">
                     <div class="col-12 text-center img-foot">
                         <img src="img/image-mascotgroup3.png" alt="" width="100%">
