--- a/dinosaurs/dino-hub.html
+++ b/dinosaurs/dino-hub.html
@@ -20,7 +20,7 @@
                 width: 100%;
                 height: 100%;
                 position: absolute;
-                background: transparent url('../img/banner-dinosaur-list.png') 0% 0% no-repeat padding-box;
+                background: transparent url('../img/banner-dino.jpg') 0% 0% no-repeat padding-box;
                 background-size: contain;
             }
             .d-pic {
@@ -141,7 +141,7 @@
             <div class="d-pic">
                 <div class="row">
                     <div class="col-md-12 col-sm-12 text-center">
-                        <p class="Skranji font-size-48">DINOSAURS</p>
+                        <p class="Skranji font-size-48">OUR DINOSAURS IN THE PARK</p>
                     </div>
                 </div>
                 <div class="row">
