--- a/parkmap/parkmap.html
+++ b/parkmap/parkmap.html
@@ -109,6 +109,9 @@
                 .gap-map {
                     margin-top: 0px;
                 }
+                .d-pic {
+                    margin-top: 380px !important;
+                }
             }
         </style>
     </head>
@@ -238,7 +241,7 @@
                         </div>
                         <div class="col-md-4 col-sm-4 mt-3 mb-5">
                             <img src="../img/parkmap/highlight-explore.png" alt="" width="100%">
-                            <p class="font-size-36 Lexend-extra mt-4">EXPLORE DINOSAURS</p>
+                            <p class="font-size-36 Lexend-extra mt-4">EXPLORE OUR DINOSAURS</p>
                             <p class="font-size-28">
                                 Attention to all dinosaur enthusiasts! We cordially invite you to immerse yourself in a prehistoric paradise at Dino Park Phuket, where the dreams of every dinosaur lover come to life. Seize the opportunity to stroll among these magnificent creatures residing in our park and cherish unforgettable experiences. Assemble your group and embark on an exploration together. Your dino paradise eagerly awaits your arrival!
                             </p>
@@ -257,7 +260,7 @@
                         </div>
                         <div class="col-md-4 col-sm-4 mt-3 mb-5">
                             <img src="../img/parkmap/highlight-facility.png" alt="" width="100%">
-                            <p class="font-size-36 Lexend-extra mt-4">DINO GALLERY</p>
+                            <p class="font-size-36 Lexend-extra mt-4">DINO PARK GALLERY</p>
                             <p class="font-size-28">Step into the world of Dinosaurs and enjoy the ultimate combination of fun, excitement and delicious food at Dinopark! Perfect for families and friends.</p>
                             <div class="row btn-bottom mb-3">
                                 <div class="col-12">
