--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                 width: 100%;
                 height: 1046px;
                 position: absolute;
-                background: transparent url('img/banner-home.png') 0% 0% no-repeat padding-box;
+                background: transparent url('img/banner-home2.png') 0% 0% no-repeat padding-box;
                 opacity: 1;
             }
             .bg2 {
@@ -136,6 +136,9 @@
             .head-topic {
                 font-size: 48px;
             }
+            .second-topic {
+                font-size: 44px;
+            }
             .head-box {
                 margin-top: 1050px;
                 margin-left: 280px;
@@ -173,8 +176,11 @@
                 .head-topic {
                     font-size: 36px;
                 }
+                .second-topic {
+                    font-size: 32px;
+                }
                 .head-box {
-                    margin-top: 500px;
+                    margin-top: 580px;
                     margin-left: 0px;
                     margin-right: 0px;
                 }
@@ -195,8 +201,11 @@
                 .head-topic {
                     font-size: 20px !important;
                 }
+                .second-topic {
+                    font-size: 18px;
+                }
                 .head-box {
-                    margin-top: 140px !important;
+                    margin-top: 185px !important;
                     margin-left: 0px;
                     margin-right: 0px;
                 }
@@ -325,12 +334,12 @@
                 </div>
                 <div class="row content-box">
                     <div class="col-12 text-center">
-                        <p class="Skranji head-topic head-text">
+                        <p class="Skranji head-topic head-text" style="text-transform: uppercase;">
                             Dino Park Phuket - A World Out Of Time
                         </p>
                     </div>
                     <div class="col-12 text-center">
-                        <p class="Skranji head-topic head-text">READY TO PUTT YOUR WAY BACK IN TIME</p>
+                        <p class="Skranji second-topic head-text">READY TO PUTT YOUR WAY BACK IN TIME</p>
                     </div>
                 </div>
                 <div class="row text2-box">
@@ -406,7 +415,7 @@
                 
                 <div class="row">
                     <div class="col-12 text-center img-foot">
-                        <img src="img/image-mascotgroup1.png" alt="" width="100%">
+                        <img src="img/image-mascotgroup3.png" alt="" width="100%">
                     </div>
                 </div>
             </div> <!-- content -->
