--- a/aboutus.html
+++ b/aboutus.html
@@ -305,7 +305,7 @@
                 </div>
 
                 <div class="e-group">
-                    <div class="row col history-img">
+                    <div class="row history-img">
                         <div class="row mt-3 mb-3 text-center">
                             <div class="col-md-4 col-sm-4 mt-3 mb-3">
                                 <img src="img/history/S__1.jpg" alt="" width="100%" style="border-radius: 20px;">
@@ -340,7 +340,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="row col history-img-hide" style="display: none;">
+                    <div class="row history-img-hide" style="display: none;">
                         <div class="row mt-3 mb-3 text-center">
                             <div class="col-md-4 col-sm-4 mt-3 mb-3">
                                 <img src="img/history/S__10.jpg" alt="" width="100%" style="border-radius: 20px;">
@@ -421,7 +421,7 @@
                     </div>
                     <div class="col-4 text-center e-pic">
                         <a href="soon.html">
-                            <img src="img/image-dinoshop.png" alt="" width="100%">
+                            <img src="img/image-dinostoreblock.png" alt="" width="100%">
                         </a>
                         <a href="soon.html"  class="link">
                             <p class="Lexend-extra e-text">Dino Shop</p>
@@ -429,7 +429,7 @@
                     </div>
                     <div class="col-4 text-center e-pic">
                         <a href="eat-drink/food.html">
-                            <img src="img/image-dinobarblock.png" alt="" width="100%">
+                            <img src="img/image-dinokitchenblock.png" alt="" width="100%">
                         </a>
                         <a href="eat-drink/food.html"  class="link">
                             <p class="Lexend-extra e-text">Dino Kitchen</p>
