--- a/parkmap/parkmap.html
+++ b/parkmap/parkmap.html
@@ -70,6 +70,20 @@
             .gap-map {
                 margin-top: -100px;
             }
+            @media screen and (max-width: 1024px) {
+                .bg1 {
+                    background-size: contain;
+                }
+                .btn-first {
+                    width: 100% !important;
+                }
+                .gap-map {
+                    margin-top: 0px;
+                }
+                .d-pic {
+                    margin-top: 380px !important;
+                }
+            }
             @media screen and (max-width: 600px) {
                 .d-pic {
                     margin-top: 100px !important;
@@ -97,20 +111,6 @@
                 .dino-sketch-02 {
                     left: -816.6650390625px !important;
                     position: absolute;
-                }
-            }
-            @media screen and (max-width: 1024px) {
-                .bg1 {
-                    background-size: contain;
-                }
-                .btn-first {
-                    width: 100% !important;
-                }
-                .gap-map {
-                    margin-top: 0px;
-                }
-                .d-pic {
-                    margin-top: 380px !important;
                 }
             }
         </style>
@@ -159,7 +159,7 @@
                     </div>
                 </div>
                 
-                <div class="row col eat-img">
+                <div class="row eat-img">
                     <div class="row mt-4 mb-3">
                         <div class="col-md-4 col-sm-4 mt-3 mb-5">
                             <img src="../img/parkmap/highlight-minigolf.png" alt="" width="100%">
