--- a/svg/topbar.html
+++ b/svg/topbar.html
@@ -33,7 +33,7 @@
                         <a class="dropdown-item" href="../dinosaurs/dino-hub.html">DINOSAURS</a>
                         <a class="dropdown-item" href="../eat-drink/food.html">EAT</a>
                         <a class="dropdown-item" href="../soon.html">STORE</a>
-                        
+                        <a class="dropdown-item" href="../mascots/mascot.html">MASCOTS</a>
                     </div>
                 </li>
                 <li>
