--- a/eat-drink/food.html
+++ b/eat-drink/food.html
@@ -211,7 +211,7 @@
                     </div>
                 </div>
                 
-                <div class="row col eat-img">
+                <div class="row eat-img">
                     <div class="row mt-3 mb-3 text-center">
                         <div class="col-md-4 col-sm-4 mt-3 mb-3">
                             <img src="../img/ed/image-eat2.png" alt="" width="100%">
