--- a/parkmap/mini-golf.html
+++ b/parkmap/mini-golf.html
@@ -72,6 +72,19 @@
             img {
                 border-radius: 20px;
             }
+            @media screen and (max-width: 1024px) {
+                .d-pic {
+                    margin-top: 440px !important;
+                    margin-left: 50px !important;
+                    margin-right: 50px !important;
+                }
+                .highlight-sl {
+                    width: 100%;
+                    height: auto;
+                    position: static !important;
+                    margin-top: 15px;
+                }
+            }
             @media screen and (max-width: 600px) {
                 .d-pic {
                     margin-top: 120px !important;
@@ -96,19 +109,6 @@
             @media screen and (max-width: 400px) {
                 .head-eat {
                     font-size: 42px !important;
-                }
-            }
-            @media screen and (max-width: 1024px) {
-                .d-pic {
-                    margin-top: 440px !important;
-                    margin-left: 50px !important;
-                    margin-right: 50px !important;
-                }
-                .highlight-sl {
-                    width: 100%;
-                    height: auto;
-                    position: static !important;
-                    margin-top: 15px;
                 }
             }
         </style>
@@ -203,7 +203,7 @@
                     </div>
                 </div>
                 <div class="row bt-duo">
-                    <div class="col-6 text-center">
+                    <div class="col-md-6 text-center">
                         <svg xmlns="http://www.w3.org/2000/svg" width="100%" height="90" viewBox="0 0 400 90">
                             <a xlink:href="https://dinopark-online.globaltix.com/attraction/dino-park-phuket-mini-golf-48265" target="_blank">
                                 <g id="button-see_more_foods-default" data-name="button-see more foods-default" transform="translate(-1111 -778.615)">
@@ -214,7 +214,7 @@
                         </svg>
                     </div>
                 </div>
-                <div class="row col eat-img">
+                <div class="row eat-img">
                     <div class="row mt-3 mb-3 text-center">
                         <div class="col-md-4 col-sm-4 mt-3 mb-3">
                             <img src="../img/parkmap/minigolf/mini-golf1.jpg" alt="" width="100%">
@@ -274,9 +274,8 @@
                 </div>
                 
                 <div class="row">
-                    <div class="col-md-12 col-sm-12 text-center">
-                        <img src="../img/Parasaurolophus.png" alt="" width="30%">
-                        <img src="../img/Dilophosaurus.png" alt="" width="30%">
+                    <div class="offset-md-3 col-md-6 offset-sm-3 col-sm-6 text-center pic-foot">
+                        <img src="../img/Group-302.png" alt="" width="100%">
                     </div>
                 </div>
             </div>
