--- a/eat-drink/food.html
+++ b/eat-drink/food.html
@@ -69,6 +69,9 @@
             .bt-duo {
                 margin: 25px 0px;
             }
+            .img-radius {
+                border-radius: 20px;
+            }
             @media screen and (max-width: 600px) {
                 .d-pic {
                     margin-top: 100px !important;
@@ -214,55 +217,57 @@
                 <div class="row eat-img">
                     <div class="row mt-3 mb-3 text-center">
                         <div class="col-md-4 col-sm-4 mt-3 mb-3">
-                            <img src="../img/ed/image-eat2.png" alt="" width="100%">
+                            <img class="img-radius" src="../img/ed/image-eat1.jpg" alt="" width="100%">
                         </div>
                         <div class="col-md-4 col-sm-4 mt-3 mb-3">
-                            <img src="../img/ed/image-eat3.png" alt="" width="100%">
+                            <img class="img-radius" src="../img/ed/image-eat2.jpg" alt="" width="100%">
                         </div>
                         <div class="col-md-4 col-sm-4 mt-3 mb-3">
-                            <img src="../img/ed/image-eat6.png" alt="" width="100%">
-                        </div>
-                    </div>
-                    <div class="row mt-3 mb-3 text-center">
-                        <!-- <div class="col-md-4 col-sm-4 mt-3 mb-3">
-                            <img src="../img/ed/image-eat4.png" alt="" width="100%">
-                        </div> -->
-                        <!-- <div class="col-md-4 col-sm-4 mt-3 mb-3">
-                            <img src="../img/ed/image-eat5.png" alt="" width="100%">
-                        </div> -->
-                        
-                    </div>
-                    <div class="row mt-3 mb-3 text-center">
-                        <div class="col-md-4 col-sm-4 mt-3 mb-3">
-                            <img src="../img/ed/image-eat7.png" alt="" width="100%">
-                        </div>
-                        <div class="col-md-4 col-sm-4 mt-3 mb-3">
-                            <img src="../img/ed/image-eat8.png" alt="" width="100%">
-                        </div>
-                        <div class="col-md-4 col-sm-4 mt-3 mb-3">
-                            <img src="../img/ed/image-eat9.png" alt="" width="100%">
+                            <img class="img-radius" src="../img/ed/image-eat3.jpg" alt="" width="100%">
                         </div>
                     </div>
                     <div class="row mt-3 mb-3 text-center">
                         <div class="col-md-4 col-sm-4 mt-3 mb-3">
-                            <img src="../img/ed/image-eat10.png" alt="" width="100%">
+                            <img class="img-radius" src="../img/ed/image-eat4.jpg" alt="" width="100%">
                         </div>
                         <div class="col-md-4 col-sm-4 mt-3 mb-3">
-                            <img src="../img/ed/image-eat11.png" alt="" width="100%">
+                            <img class="img-radius" src="../img/ed/image-eat5.jpg" alt="" width="100%">
                         </div>
                         <div class="col-md-4 col-sm-4 mt-3 mb-3">
-                            <img src="../img/ed/image-eat12.png" alt="" width="100%">
+                            <img class="img-radius" src="../img/ed/image-eat6.jpg" alt="" width="100%">
+                        </div>
+                    </div>
+                    <div class="row mt-3 mb-3 text-center">
+                        <div class="col-md-4 col-sm-4 mt-3 mb-3">
+                            <img class="img-radius" src="../img/ed/image-eat7.jpg" alt="" width="100%">
+                        </div>
+                        <div class="col-md-4 col-sm-4 mt-3 mb-3">
+                            <img class="img-radius" src="../img/ed/image-eat8.jpg" alt="" width="100%">
+                        </div>
+                        <div class="col-md-4 col-sm-4 mt-3 mb-3">
+                            <img class="img-radius" src="../img/ed/image-eat9.jpg" alt="" width="100%">
+                        </div>
+                    </div>
+                    <div class="row mt-3 mb-3 text-center">
+                        <div class="col-md-4 col-sm-4 mt-3 mb-3">
+                            <img class="img-radius" src="../img/ed/image-eat10.jpg" alt="" width="100%">
+                        </div>
+                        <div class="col-md-4 col-sm-4 mt-3 mb-3">
+                            <img class="img-radius" src="../img/ed/image-eat11.jpg" alt="" width="100%">
+                        </div>
+                        <div class="col-md-4 col-sm-4 mt-3 mb-3">
+                            <img class="img-radius" src="../img/ed/image-eat12.jpg" alt="" width="100%">
                         </div>
                     </div>
                     <div class="row text-center">
                         <div class="col-md-4 col-sm-4 mt-3 mb-3">
-                            <img src="../img/ed/image-eat13.png" alt="" width="100%">
+                            <img class="img-radius" src="../img/ed/image-eat13.jpg" alt="" width="100%">
                         </div>
                         <div class="col-md-4 col-sm-4 mt-3 mb-3">
-                            <img src="../img/ed/image-eat14.png" alt="" width="100%">
+                            <img class="img-radius" src="../img/ed/image-eat14.jpg" alt="" width="100%">
                         </div>
                         <div class="col-md-4 col-sm-4 mt-3 mb-3">
-                            <img src="../img/ed/image-eat1.png" alt="" width="100%" style="border-radius: 20px;">
+                            <img class="img-radius" src="../img/ed/image-eat15.jpg" alt="" width="100%">
                         </div>
                     </div>
                 </div>
