--- a/index.html
+++ b/index.html
@@ -405,7 +405,7 @@
                     </div>
                     <div class="col-4 text-center e-pic">
                         <a href="soon.html">
-                            <img src="img/image-dinostoreblock.png" alt="" width="100%">
+                            <img src="img/image-dinostore.png" alt="" width="100%">
                         </a>
                         <a href="soon.html"  class="link">
                             <p class="Lexend-extra e-text">Dino Store</p>
