--- a/index.html
+++ b/index.html
@@ -334,11 +334,6 @@
                 </div>
                 <div class="row content-box">
                     <div class="col-12 text-center">
-                        <p class="Skranji head-topic head-text" style="text-transform: uppercase;">
-                            Dino Park Phuket - A World Out Of Time
-                        </p>
-                    </div>
-                    <div class="col-12 text-center">
                         <p class="Skranji second-topic head-text">READY TO PUTT YOUR WAY BACK IN TIME</p>
                     </div>
                 </div>
@@ -349,6 +344,11 @@
                         </p>
                         
                     </div>
+                </div>
+                <div class="col-12 text-center">
+                    <p class="font-size-28 content-text" style="text-transform: uppercase;">
+                        Dino Park Phuket - A World Out Of Time
+                    </p>
                 </div>
                 <div class="row btn-contract">
                     <div class="col-12 text-center">
@@ -389,7 +389,7 @@
                 <div class="row e-group">
                     <div class="col-4 text-center e-pic">
                         <a href="eat-drink/food.html">
-                            <img src="img/image-dinokitchenblock.png" alt="" width="100%">
+                            <img src="img/image-dinokitchen.png" alt="" width="100%">
                         </a>
                         <a href="eat-drink/food.html"  class="link">
                             <p class="Lexend-extra e-text">Dino Kitchen</p>
@@ -397,7 +397,7 @@
                     </div>
                     <div class="col-4 text-center e-pic">
                         <a href="eat-drink/drink.html">
-                            <img src="img/image-dinobarblock.png" alt="" width="100%">
+                            <img src="img/dino-bar.png" alt="" width="100%">
                         </a>
                         <a href="eat-drink/drink.html"  class="link">
                             <p class="Lexend-extra e-text">Dino Bar</p>
@@ -408,7 +408,7 @@
                             <img src="img/image-dinostore.png" alt="" width="100%">
                         </a>
                         <a href="soon.html"  class="link">
-                            <p class="Lexend-extra e-text">Dino Store</p>
+                            <p class="Lexend-extra e-text">Dino Park Store</p>
                         </a>
                     </div>
                 </div>
