--- a/aboutus.html
+++ b/aboutus.html
@@ -20,11 +20,11 @@
                 top: 0px;
                 left: 0px;
                 width: 100%;
-                height: 634px;
+                height: 1046px;
                 position: absolute;
                 background: transparent url('img/banner-aboutus2.png') 0% 0% no-repeat padding-box;
                 opacity: 1;
-                background-size: contain;
+                /* background-size: contain; */
             }
             .bg2 {
                 top: 284px;
@@ -413,7 +413,7 @@
                 <div class="row e-group">
                     <div class="col-4 text-center e-pic">
                         <a href="soon.html">
-                            <img src="img/image-minigolf.png" alt="" width="100%">
+                            <img src="img/image-minigolf-aboutus.png" alt="" width="100%">
                         </a>
                         <a href="soon.html"  class="link">
                             <p class="Lexend-extra e-text">Minigolf</p>
@@ -424,12 +424,12 @@
                             <img src="img/image-dinostore.png" alt="" width="100%">
                         </a>
                         <a href="soon.html"  class="link">
-                            <p class="Lexend-extra e-text">Dino Shop</p>
+                            <p class="Lexend-extra e-text">Dino Park Shop</p>
                         </a>
                     </div>
                     <div class="col-4 text-center e-pic">
                         <a href="eat-drink/food.html">
-                            <img src="img/image-dinokitchenblock.png" alt="" width="100%">
+                            <img src="img/image-dinokitchen.png" alt="" width="100%">
                         </a>
                         <a href="eat-drink/food.html"  class="link">
                             <p class="Lexend-extra e-text">Dino Kitchen</p>
