--- a/aboutus.html
+++ b/aboutus.html
@@ -412,7 +412,7 @@
                 </div>
                 <div class="row e-group">
                     <div class="col-4 text-center e-pic">
-                        <a href="soon.html">
+                        <a href="mini-golf.html">
                             <img src="img/image-minigolf-aboutus.png" alt="" width="100%">
                         </a>
                         <a href="soon.html"  class="link">
