--- a/aboutus.html
+++ b/aboutus.html
@@ -412,10 +412,10 @@
                 </div>
                 <div class="row e-group">
                     <div class="col-4 text-center e-pic">
-                        <a href="mini-golf.html">
+                        <a href="parkmap/mini-golf.html">
                             <img src="img/image-minigolf-aboutus.png" alt="" width="100%">
                         </a>
-                        <a href="soon.html"  class="link">
+                        <a href="parkmap/mini-golf.html"  class="link">
                             <p class="Lexend-extra e-text">Minigolf</p>
                         </a>
                     </div>
