--- a/eat-drink/food.html
+++ b/eat-drink/food.html
@@ -216,19 +216,11 @@
                 
                 <div class="row eat-img">
                     <div class="row mt-3 mb-3 text-center">
-                        <div class="col-md-4 col-sm-4 mt-3 mb-3">
+                    <!-- <div class="col-md-4 col-sm-4 mt-3 mb-3">
                             <img class="img-radius" src="../img/ed/image-eat1.jpg" alt="" width="100%">
-                        </div>
+                        </div> -->
                         <div class="col-md-4 col-sm-4 mt-3 mb-3">
                             <img class="img-radius" src="../img/ed/image-eat2.jpg" alt="" width="100%">
-                        </div>
-                        <div class="col-md-4 col-sm-4 mt-3 mb-3">
-                            <img class="img-radius" src="../img/ed/image-eat3.jpg" alt="" width="100%">
-                        </div>
-                    </div>
-                    <div class="row mt-3 mb-3 text-center">
-                        <div class="col-md-4 col-sm-4 mt-3 mb-3">
-                            <img class="img-radius" src="../img/ed/image-eat4.jpg" alt="" width="100%">
                         </div>
                         <div class="col-md-4 col-sm-4 mt-3 mb-3">
                             <img class="img-radius" src="../img/ed/image-eat5.jpg" alt="" width="100%">
@@ -236,6 +228,14 @@
                         <div class="col-md-4 col-sm-4 mt-3 mb-3">
                             <img class="img-radius" src="../img/ed/image-eat6.jpg" alt="" width="100%">
                         </div>
+                    <!-- <div class="col-md-4 col-sm-4 mt-3 mb-3">
+                            <img class="img-radius" src="../img/ed/image-eat3.jpg" alt="" width="100%">
+                        </div> -->
+                    </div>
+                    <div class="row mt-3 mb-3 text-center">
+                       <!--  <div class="col-md-4 col-sm-4 mt-3 mb-3">
+                            <img class="img-radius" src="../img/ed/image-eat4.jpg" alt="" width="100%">
+                        </div> -->
                     </div>
                     <div class="row mt-3 mb-3 text-center">
                         <div class="col-md-4 col-sm-4 mt-3 mb-3">
