Update our story
dino park store

--- a/aboutus.html
+++ b/aboutus.html
@@ -424,7 +424,7 @@
                             <img src="img/image-dinostore.png" alt="" width="100%">
                         </a>
                         <a href="soon.html"  class="link">
-                            <p class="Lexend-extra e-text">Dino Park Shop</p>
+                            <p class="Lexend-extra e-text">Dino Park Store</p>
                         </a>
                     </div>
                     <div class="col-4 text-center e-pic">
