--- a/parkmap/parkmap.html
+++ b/parkmap/parkmap.html
@@ -20,12 +20,12 @@
                 top: 0px;
                 left: 0px;
                 width: 100%;
-                height: 100%;
+                height: 950px;
                 position: absolute;
-                background: transparent url('../img/banner-parkmap.jpg') 0% 0% no-repeat padding-box;
+                background: transparent url('../img/banner-parkmap.png') 0% 0% no-repeat padding-box;
             }
             .d-pic {
-                margin-top: 680px;
+                margin-top: 780px;
                 margin-left: 138px;
                 margin-right: 138px;
             }
@@ -171,7 +171,7 @@
                             <div class="row mb-3">
                                 <div class="col-12">
                                     <svg class="btn-first" xmlns="http://www.w3.org/2000/svg" height="90" viewBox="0 0 400 90">
-                                        <a xlink:href="https://dinopark-online.globaltix.com/attraction/dino-park-phuket-mini-golf-48265">
+                                        <a xlink:href="https://dinopark-online.globaltix.com/attraction/dino-park-phuket-mini-golf-48265" target="_blank">
                                             <g id="button-see_more_drinks-default" data-name="button-see more drinks-default" transform="translate(-1111 -778.615)">
                                               <rect id="Rectangle_44" data-name="Rectangle 44" width="400" height="90" rx="20" transform="translate(1111 778.615)" fill="#7f7f4e"/>
                                               <text id="See_more" data-name="See more" transform="translate(1311 835.615)" fill="#fdf3ec" font-size="32" font-family="Lexend" font-weight="600"><tspan x="-75" y="0">Buy Ticket</tspan></text>
@@ -221,7 +221,7 @@
                         </div>
 
                         <div class="col-md-4 col-sm-4 mt-3 mb-5">
-                            <img src="../img/parkmap/highlight-dinostore.png" alt="" width="100%">
+                            <img src="../img/parkmap/highlight-dinostore2.jpg" alt="" width="100%" height="746px" style="border-radius: 20px;">
                             <p class="font-size-36 Lexend-extra mt-4">DINO PARK STORE</p>
                             <p class="font-size-28">
                                 Discover the ultimate collection of dino-inspired souvenirs at our Dino Park Store. Whether you're a paleontology pro or a dino-loving kid, our website offers an array of memorable treasures. Explore the prehistoric paradise today! 
