--- a/mascots/mascot.html
+++ b/mascots/mascot.html
@@ -18,13 +18,12 @@
                 top: 0px;
                 left: 0px;
                 width: 100%;
-                height: 100%;
+                height: 1200px;
                 position: absolute;
-                background: transparent url('../img/banner-mascot.jpg') 0% 0% no-repeat padding-box;
-                background-size: contain;
+                background: transparent url('../img/banner-mascot.png') 0% 0% no-repeat padding-box;
             }
             .d-pic {
-                margin-top: 600px;
+                margin-top: 1100px;
                 margin-left: 250px;
                 margin-right: 250px;
             }
@@ -66,6 +65,11 @@
                 position: absolute;
             }
             @media screen and (max-width: 1024px){
+                .bg1 {
+                    background-size: contain;
+                    width: 100%;
+                    height: 100% !important;
+                }
                 .col-md-6 {
                     -webkit-box-flex: 0;
                     -ms-flex: 0 0 50%;
@@ -78,10 +82,15 @@
                 .dino-sketch-03 {
                     display: none;
                 }
+                .d-pic {
+                    margin-top: 500px !important;
+                    margin-left: 50px !important;
+                    margin-right: 50px !important;
+                }
             }
             @media screen and (max-width: 600px) {
                 .d-pic {
-                    margin-top: 100px !important;
+                    margin-top: 150px !important;
                     margin-left: 0px !important;
                     margin-right: 0px !important;
                 }
