--- a/parkmap/parkmap.html
+++ b/parkmap/parkmap.html
@@ -221,7 +221,7 @@
                         </div>
 
                         <div class="col-md-4 col-sm-4 mt-3 mb-5">
-                            <img src="../img/parkmap/highlight-dinostore2.jpg" alt="" width="100%" style="border-radius: 20px;">
+                            <img src="../img/parkmap/highlight-dinostore2.png" alt="" width="100%" style="border-radius: 20px;" class="mb-2">
                             <p class="font-size-36 Lexend-extra mt-4">DINO PARK STORE</p>
                             <p class="font-size-28">
                                 Discover the ultimate collection of dino-inspired souvenirs at our Dino Park Store. Whether you're a paleontology pro or a dino-loving kid, our website offers an array of memorable treasures. Explore the prehistoric paradise today! 
