--- a/parkmap/mini-golf.html
+++ b/parkmap/mini-golf.html
@@ -208,7 +208,7 @@
                             <a xlink:href="https://dinopark-online.globaltix.com/attraction/dino-park-phuket-mini-golf-48265" target="_blank">
                                 <g id="button-see_more_foods-default" data-name="button-see more foods-default" transform="translate(-1111 -778.615)">
                                     <rect id="Rectangle_44" data-name="Rectangle 44" width="400" height="90" rx="20" transform="translate(1111 778.615)" fill="#7f7f4e"/>
-                                    <text id="See_more_foods" data-name="See more foods" transform="translate(1311 835.615)" fill="#fdf3ec" font-size="32" font-family="Lexend" font-weight="600"><tspan x="-75" y="0">See more</tspan></text>
+                                    <text id="See_more_foods" data-name="See more foods" transform="translate(1311 835.615)" fill="#fdf3ec" font-size="32" font-family="Lexend" font-weight="600"><tspan x="-75" y="0">Buy Ticket</tspan></text>
                                 </g>
                             </a>
                         </svg>
