--- a/parkmap/parkmap.html
+++ b/parkmap/parkmap.html
@@ -171,10 +171,10 @@
                             <div class="row mb-3">
                                 <div class="col-12">
                                     <svg class="btn-first" xmlns="http://www.w3.org/2000/svg" height="90" viewBox="0 0 400 90">
-                                        <a xlink:href="https://dinopark-online.globaltix.com/attraction/dino-park-phuket-mini-golf-48265" target="_blank">
+                                        <a xlink:href="mini-golf.html">
                                             <g id="button-see_more_drinks-default" data-name="button-see more drinks-default" transform="translate(-1111 -778.615)">
                                               <rect id="Rectangle_44" data-name="Rectangle 44" width="400" height="90" rx="20" transform="translate(1111 778.615)" fill="#7f7f4e"/>
-                                              <text id="See_more" data-name="See more" transform="translate(1311 835.615)" fill="#fdf3ec" font-size="32" font-family="Lexend" font-weight="600"><tspan x="-75" y="0">Buy Ticket</tspan></text>
+                                              <text id="See_more" data-name="See more" transform="translate(1311 835.615)" fill="#fdf3ec" font-size="32" font-family="Lexend" font-weight="600"><tspan x="-75" y="0">See more</tspan></text>
                                             </g>
                                         </a>
                                       </svg>
