--- a/parkmap/dino-gallery.html
+++ b/parkmap/dino-gallery.html
@@ -21,13 +21,12 @@
                 left: 0px;
                 width: 100%;
                 /* height: 100%; */
-                height: 1046px;
+                height: 1200px;
                 position: absolute;
-                background: transparent url('../img/banner-gallery.jpg') 0% 0% no-repeat padding-box;
-                background-size: contain;
+                background: transparent url('../img/banner-gallery.png') 0% 0% no-repeat padding-box;
             }
             .d-pic {
-                margin-top: 850px;
+                margin-top: 1100px;
                 margin-left: 138px;
                 margin-right: 138px;
             }
@@ -74,7 +73,7 @@
             }
             @media screen and (max-width: 1024px) {
                 .d-pic {
-                    margin-top: 440px !important;
+                    margin-top:500px !important;
                     margin-left: 50px !important;
                     margin-right: 50px !important;
                 }
@@ -84,10 +83,13 @@
                     position: static !important;
                     margin-top: 15px;
                 }
+                .bg1 {
+                    background-size: contain;
+                }
             }
             @media screen and (max-width: 600px) {
                 .d-pic {
-                    margin-top: 120px !important;
+                    margin-top: 150px !important;
                     margin-left: 0px !important;
                     margin-right: 0px !important;
                 }
@@ -104,6 +106,9 @@
                 
                 .font-size-36 {
                     font-size: 28px !important;
+                }
+                .head-eat {
+                    font-size: 38px;
                 }
             }
             @media screen and (max-width: 400px) {
