--- a/eat-drink/food.html
+++ b/eat-drink/food.html
@@ -72,6 +72,14 @@
             .img-radius {
                 border-radius: 20px;
             }
+            @media screen and (max-width: 1024px) {
+                .highlight-sl {
+                    width: 100%;
+                    height: auto;
+                    position: static !important;
+                    margin-top: 15px;
+                }
+            }
             @media screen and (max-width: 600px) {
                 .d-pic {
                     margin-top: 100px !important;
@@ -92,21 +100,17 @@
                 .font-size-36 {
                     font-size: 28px !important;
                 }
+                .dot-group {
+                    top: 480px !important;
+                    position: absolute;
+                    width: 100%;
+                }
             }
             @media screen and (max-width: 400px) {
                 .head-eat {
                     font-size: 42px !important;
                 }
             }
-            @media screen and (max-width: 1024px) {
-                .highlight-sl {
-                    width: 100%;
-                    height: auto;
-                    position: static !important;
-                    margin-top: 15px;
-                }
-            }
-
         </style>
     </head>
 <body>
@@ -220,7 +224,7 @@
                             <img class="img-radius" src="../img/ed/image-eat1.jpg" alt="" width="100%">
                         </div> -->
                         <div class="col-md-4 col-sm-4 mt-3 mb-3">
-                            <img class="img-radius" src="../img/ed/image-eat2.jpg" alt="" width="100%">
+                            <img class="img-radius" src="../img/ed/image-eat3.jpg" alt="" width="100%">
                         </div>
                         <div class="col-md-4 col-sm-4 mt-3 mb-3">
                             <img class="img-radius" src="../img/ed/image-eat5.jpg" alt="" width="100%">
@@ -232,42 +236,78 @@
                             <img class="img-radius" src="../img/ed/image-eat3.jpg" alt="" width="100%">
                         </div> -->
                     </div>
-                    <div class="row mt-3 mb-3 text-center">
+                    <div class="row text-center">
                        <!--  <div class="col-md-4 col-sm-4 mt-3 mb-3">
                             <img class="img-radius" src="../img/ed/image-eat4.jpg" alt="" width="100%">
                         </div> -->
                     </div>
-                    <div class="row mt-3 mb-3 text-center">
-                        <div class="col-md-4 col-sm-4 mt-3 mb-3">
+                    <div class="row text-center">
+                        <!-- <div class="col-md-4 col-sm-4 mt-3 mb-3">
                             <img class="img-radius" src="../img/ed/image-eat7.jpg" alt="" width="100%">
-                        </div>
+                        </div> -->
                         <div class="col-md-4 col-sm-4 mt-3 mb-3">
                             <img class="img-radius" src="../img/ed/image-eat8.jpg" alt="" width="100%">
                         </div>
                         <div class="col-md-4 col-sm-4 mt-3 mb-3">
                             <img class="img-radius" src="../img/ed/image-eat9.jpg" alt="" width="100%">
                         </div>
-                    </div>
-                    <div class="row mt-3 mb-3 text-center">
                         <div class="col-md-4 col-sm-4 mt-3 mb-3">
                             <img class="img-radius" src="../img/ed/image-eat10.jpg" alt="" width="100%">
                         </div>
+                    </div>
+                    <div class="row text-center">
                         <div class="col-md-4 col-sm-4 mt-3 mb-3">
                             <img class="img-radius" src="../img/ed/image-eat11.jpg" alt="" width="100%">
                         </div>
                         <div class="col-md-4 col-sm-4 mt-3 mb-3">
                             <img class="img-radius" src="../img/ed/image-eat12.jpg" alt="" width="100%">
                         </div>
-                    </div>
-                    <div class="row text-center">
                         <div class="col-md-4 col-sm-4 mt-3 mb-3">
                             <img class="img-radius" src="../img/ed/image-eat13.jpg" alt="" width="100%">
                         </div>
+                    </div>
+                    <div class="row text-center">
                         <div class="col-md-4 col-sm-4 mt-3 mb-3">
-                            <img class="img-radius" src="../img/ed/image-eat14.jpg" alt="" width="100%">
+                            <img class="img-radius" src="../img/ed/image-eat17.jpg" alt="" width="100%">
                         </div>
                         <div class="col-md-4 col-sm-4 mt-3 mb-3">
+                            <img class="img-radius" src="../img/ed/image-eat19.jpg" alt="" width="100%">
+                        </div>
+                        <div class="col-md-4 col-sm-4 mt-3 mb-3">
+                            <img class="img-radius" src="../img/ed/image-eat21.jpg" alt="" width="100%">
+                        </div>
+                    </div>
+                    <div class="row text-center">
+                        <div class="col-md-4 col-sm-4 mt-3 mb-3">
+                            <img class="img-radius" src="../img/ed/image-eat20.jpg" alt="" width="100%">
+                        </div>
+                        <div class="col-md-4 col-sm-4 mt-3 mb-3">
+                            <img class="img-radius" src="../img/ed/image-eat18.jpg" alt="" width="100%">
+                        </div>
+                        <div class="col-md-4 col-sm-4 mt-3 mb-3">
+                            <img class="img-radius" src="../img/ed/image-eat22.jpg" alt="" width="100%">
+                        </div>
+                    </div>
+                    <div class="row text-center">
+                        <div class="col-md-4 col-sm-4 mt-3 mb-3">
+                            <img class="img-radius" src="../img/ed/image-eat23.jpg" alt="" width="100%">
+                        </div>
+                        <div class="col-md-4 col-sm-4 mt-3 mb-3">
+                            <img class="img-radius" src="../img/ed/image-eat24.jpg" alt="" width="100%">
+                        </div>
+                        <div class="col-md-4 col-sm-4 mt-3 mb-3">
+                            <img class="img-radius" src="../img/ed/image-eat16.jpg" alt="" width="100%">
+                        </div>
+                    </div>
+                    <div class="row col text-center">
+                        <div class="col-md-4 col-sm-4 mt-3 mb-3" style="padding-left: 0;">
+                            <img class="img-radius" src="../img/ed/image-eat14.jpg" alt="" width="100%">
+                        </div>
+                        <div class="col-md-4 col-sm-4 mt-3 mb-3" style="padding-right: 0;">
                             <img class="img-radius" src="../img/ed/image-eat15.jpg" alt="" width="100%">
+                        </div>
+                        <div class="col-md-4 col-sm-4 mt-3 mb-3">
+                            <!-- <img class="img-radius" src="../img/ed/image-eat15.jpg" alt="" width="100%"> -->
                         </div>
                     </div>
                 </div>
