policy review header

--- a/svg/Footer.html
+++ b/svg/Footer.html
@@ -94,13 +94,13 @@
         </g>
       </g>
       <text id="_2024_Dinopark._All_Rights_Reserved." data-name="© 2024 Dinopark. All Rights Reserved." transform="translate(140 3076)" fill="#fefcfa" font-size="18" font-family="Lexend" font-weight="300" letter-spacing="0.025em"><tspan x="0" y="18">© 2024 Dinopark. All Rights Reserved.</tspan></text>
-      <a xlink:href="../soon.html">
+      <a xlink:href="../policy.html">
         <text id="PRIVACY_POLICY" data-name="PRIVACY POLICY" transform="translate(1382 3094)" fill="#fdf3ec" font-size="18" font-family="Lexend" font-weight="600" letter-spacing="0.05em"><tspan x="0" y="0">PRIVACY POLICY</tspan></text>
       </a>
       <a xlink:href="../parkmap/parkmap.html">
         <text id="PARK_MAP" data-name="PARK MAP" transform="translate(1106 2971)" fill="#fdf3ec" font-size="18" font-family="Lexend" font-weight="600" letter-spacing="0.05em"><tspan x="0" y="0">PARK MAP</tspan></text>
       </a>
-      <a xlink:href="../soon.html">
+      <a xlink:href="../review.html">
         <text id="CUSTOMER_REVIEWS" data-name="CUSTOMER REVIEWS" transform="translate(1106 3094)" fill="#fdf3ec" font-size="18" font-family="Lexend" font-weight="600" letter-spacing="0.05em"><tspan x="0" y="0">CUSTOMER REVIEWS</tspan></text>
       </a>
       <a xlink:href="../ticket.html">
