--- a/dinosaurs/Pachycephalosaurus.html
+++ b/dinosaurs/Pachycephalosaurus.html
@@ -2,9 +2,25 @@
 <html>
     <head>
         <meta charset="utf-8" />
-        <title> Pachycephalosaurus </title>
+        <title style="text-transform: uppercase;">Pachycephalosaurus - DINO PARK PHUKET - A WORLD OUT OF TIME</title>
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="description" content="Come and test your skills on our unique prehistoric-themed mini-golf course. With 18 challenging holes filled with life size dinosaurs that will take you on a journey through the Mesozoic Era.">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="shortcut icon" href="../img/Dino-park_logo-1.png">
+        <link rel="shortcut icon" href="img/Dino-park_logo-1.png">
+        <!--Keywords -->
+        <meta name="keywords" content="DINO PARK PHUKET , dinosaurs, Karon Brach, Phuket Thailand">
+        <meta name="author" content="DINO PARK">
+        <meta name="viewport" content="width=device-width,initial-scale=1.0,maximum-scale=1">
+        <link rel="icon" type="image/png" href="https://dinopark.com/img/Dino-park_logo-2.png">
+        <link rel="apple-touch-icon" sizes="60x60" href="https://dinopark.com/img/Dino-park_logo-2.png">
+        <!--OpenGraph Image -->
+        <meta property="og:image" content="https://dinopark.com/img/dino-park-og.jpg"/>
+        <meta property="og:title" content="DINO PARK PHUKET - A WORLD OUT OF TIME"/>
+        <meta property="og:description" content="Come and test your skills on our unique prehistoric-themed mini-golf course. With 18 challenging holes filled with life size dinosaurs that will take you on a journey through the Mesozoic Era."/>
+        <meta property="og:image:width" content="800"/>
+        <meta property="og:image:height" content="529"/>
+        <!-- <base href="https://www.dinopark.com/"> -->
+
         <link href="../css/bootstrap.min.css" rel="stylesheet">
         <link href="../css/custom.css" rel="stylesheet">
         <link href="../css/top-bar.css" rel="stylesheet">
