--- a/index.html
+++ b/index.html
@@ -2,15 +2,30 @@
 <html>
     <head>
         <meta charset="utf-8" />
-        <title> Home </title>
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>DINO PARK PHUKET - A WORLD OUT OF TIME</title>
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="description" content="Come and test your skills on our unique prehistoric-themed mini-golf course. With 18 challenging holes filled with life size dinosaurs that will take you on a journey through the Mesozoic Era.">
         <link rel="shortcut icon" href="img/Dino-park_logo-1.png">
+        <!--Keywords -->
+        <meta name="keywords" content="DINO PARK PHUKET , dinosaurs, Karon Brach, Phuket Thailand">
+        <meta name="author" content="DINO PARK">
+        <meta name="viewport" content="width=device-width,initial-scale=1.0,maximum-scale=1">
+        <link rel="icon" type="image/png" href="https://dinopark.com/img/Dino-park_logo-2.png">
+        <link rel="apple-touch-icon" sizes="60x60" href="https://dinopark.com/img/Dino-park_logo-2.png">
+        <!--OpenGraph Image -->
+        <meta property="og:image" content="https://dinopark.com/img/dino-park-og.jpg"/>
+        <meta property="og:title" content="DINO PARK PHUKET - A WORLD OUT OF TIME"/>
+        <meta property="og:description" content="Come and test your skills on our unique prehistoric-themed mini-golf course. With 18 challenging holes filled with life size dinosaurs that will take you on a journey through the Mesozoic Era."/>
+        <meta property="og:image:width" content="800"/>
+        <meta property="og:image:height" content="529"/>
+        <!-- <base href="https://www.dinopark.com/"> -->
+
         <link href="css/bootstrap.min.css" rel="stylesheet">
         <link href="css/custom.css" rel="stylesheet">
         <link href="css/top-bar.css" rel="stylesheet">
         <link href="css/home.css" rel="stylesheet">
-        <!-- <link href="css/aboutus.css" rel="stylesheet"> -->
         <link href="css/app.css" rel="stylesheet">
+        
         <style>
             body {
                 background: url('img/bg-texturecolor.png');
@@ -35,7 +50,7 @@
                 opacity: 1;
             }
             .bg3 {
-                top: 2018px;
+                top: 2258px;
                 left: 0px;
                 width: 100%;
                 height: 1102px;
@@ -120,7 +135,7 @@
                 position: absolute;
             }
             .mt-group{
-                margin-top: 50px;
+                margin-top: 0px;
             }
             .parktour_ticket {
                 margin-left: 25px;
@@ -140,7 +155,7 @@
                 font-size: 44px;
             }
             .head-box {
-                margin-top: 1050px;
+                margin-top: 1000px;
                 margin-left: 280px;
                 margin-right: 280px;
             }
@@ -180,7 +195,7 @@
                     font-size: 32px;
                 }
                 .head-box {
-                    margin-top: 580px;
+                    margin-top: 500px;
                     margin-left: 0px;
                     margin-right: 0px;
                 }
@@ -299,7 +314,12 @@
                 </div>
                 
                 <div class="row head-box">
-                    <div class="col-12 text-center">
+                    <div class="col-md-12 col-sm-12 text-center">
+                        <iframe width="560" height="315" src="https://www.youtube.com/embed/P45g-aLCOqA?si=5aBg1n9s4F672KU9" title="YouTube video player" 
+                            frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen>
+                        </iframe>
+                    </div>
+                    <div class="col-12 text-center mt-4">
                         <p class="Skranji head-topic ">CHOOSE YOUR TICKET</p>
                     </div>
                 </div>
