--- a/review.html
+++ b/review.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <meta charset="utf-8" />
-        <title style="text-transform: uppercase;">Coming Soon - DINO PARK PHUKET - A WORLD OUT OF TIME</title>
+        <title style="text-transform: uppercase;">CUSTOMER REVIEWS - DINO PARK PHUKET - A WORLD OUT OF TIME</title>
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="description" content="Come and test your skills on our unique prehistoric-themed mini-golf course. With 18 challenging holes filled with life size dinosaurs that will take you on a journey through the Mesozoic Era.">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -20,7 +20,6 @@
         <meta property="og:image:width" content="800"/>
         <meta property="og:image:height" content="529"/>
         <!-- <base href="https://www.dinopark.com/"> -->
-
         <link href="css/bootstrap.min.css" rel="stylesheet">
         <link href="css/custom.css" rel="stylesheet">
         <link href="css/top-bar.css" rel="stylesheet">
@@ -34,13 +33,13 @@
                 top: 0px;
                 left: 0px;
                 width: 100%;
-                height: 100%;
+                height: 1046px;
                 position: absolute;
-                background: transparent url('img/banner-aboutus.png') 0% 0% no-repeat padding-box;
-                background-size: contain;
+                background: transparent url('img/banner-home.png') 0% 0% no-repeat padding-box;
+                /* background-size: contain; */
             }
             .d-pic {
-                margin-top: 600px;
+                margin-top: 950px;
                 margin-left: 140px;
                 margin-right: 140px;
             }
@@ -94,9 +93,29 @@
             .content {
                 margin-top: 120px;
             }
+            @media screen and (max-width: 1024px) {
+                .bg1 {
+                    width: 100% !important;
+                    height: 100% !important;
+                    background-size: contain !important;
+                }
+                .d-pic {
+                    margin-top: 500px !important;
+                    margin-left: 0px !important;
+                    margin-right: 0px !important;
+                }.font-size-48 {
+                    font-size: 48px !important;
+                }
+                .font-size-36 {
+                    font-size: 36px !important;
+                }
+                .font-size-28 {
+                    font-size: 28px !important;
+                }
+            }
             @media screen and (max-width: 600px) {
                 .d-pic {
-                    margin-top: 100px !important;
+                    margin-top: 150px !important;
                     margin-left: 0px !important;
                     margin-right: 0px !important;
                 }
@@ -120,12 +139,6 @@
                 }
                 .content {
                     margin-top: 20px;
-                }
-            }
-            @media screen and (max-width: 1024px) {
-                .footer {
-                    bottom: 0 !important;
-                    position: fixed !important;
                 }
             }
         </style>
@@ -153,19 +166,39 @@
                 </div>
             </div>
             <div class="row">
+                <div class="col-12">
+                    <img class="dino-sketch-03" src="img/dino-sketch-02.png" alt="">
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-12">
+                    <img class="stain2" src="img/stain1.png" alt="">
+                </div>
+            </div>
+            <!-- <div class="row">
+                <div class="col-12">
+                    <img class="stain3" src="img/stain1.png" alt="">
+                </div>
+            </div> -->
+            <div class="row">
                 <div class="col-12 bg1"></div>
             </div>
             <div class="d-pic">
                 <div class="row">
                     <div class="col-12 text-center">
-                        <p class="Skranji font-size-48">COMING SOON !</p>
+                        <p class="Skranji font-size-48">CUSTOMER REVIEWS</p>
                     </div>
                 </div>
                 <div class="row">
-                    <div class="col-md-12 col-sm-12 text-center">
-                        <img src="img/image-mascotgroup1.png" alt="" width="100%">
+                    <div class="col-md-12 col-sm-12 mt-5">
+                        <div class="elfsight-app-b097f0ec-6fe8-48cd-9cf0-0539be7478c7" data-elfsight-app-lazy></div>
+
+                    </div>
+                    <div class="col-md-12 col-sm-12 mt-5">
+                        <div class="elfsight-app-3cc87305-c957-47d7-98af-921d02548d96" data-elfsight-app-lazy></div>
                     </div>
                 </div>
+                
             </div>
         </div> <!-- content -->
         
@@ -180,6 +213,8 @@
 <script src="js/jquery.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+<script src="https://static.elfsight.com/platform/platform.js" data-use-service-core defer></script>
+
 <script> 
     $(function(){
       $(".top-bar").load("svg/topbar.html"); 
