home aboutus banner

--- a/soon.html
+++ b/soon.html
@@ -31,16 +31,10 @@
                 background-repeat: repeat-y;
             }
             .bg1 {
-                top: 0px;
-                left: 0px;
                 width: 100%;
                 height: 100%;
-                position: absolute;
-                background: transparent url('img/banner-aboutus.png') 0% 0% no-repeat padding-box;
-                background-size: contain;
             }
-            .d-pic {
-                margin-top: 600px;
+            .d-content {
                 margin-left: 140px;
                 margin-right: 140px;
             }
@@ -95,10 +89,9 @@
                 margin-top: 120px;
             }
             @media screen and (max-width: 600px) {
-                .d-pic {
-                    margin-top: 100px !important;
-                    margin-left: 0px !important;
-                    margin-right: 0px !important;
+                .d-content {
+                    margin-left: 25px !important;
+                    margin-right: 25px !important;
                 }
                 .p--5 {
                     margin-left: -45px;
@@ -131,31 +124,19 @@
         </style>
     </head>
 <body>
+    <div class="row">
+        <div class="col-12 bg1">
+            <img src="img/banner-soon.png" alt="" width="100%">
+        </div>
+    </div>
     <header id="page-topbar">
         <div class="header-gradient"></div>
         <div class="top-bar"></div>
     </header>
-    <div class="page-content">
+    <div class="">
         <div class="container-fluid" >
-            <div class="row">
-                <div class="col-12">
-                    <img class="stain1" src="img/stain1.png" alt="">
-                </div>
-            </div>
-            <div class="row">
-                <div class="col-12">
-                    <img class="dino-sketch-01" src="img/dino-sketch-01.png" alt="">
-                </div>
-            </div>
-            <div class="row">
-                <div class="col-12">
-                    <img class="dino-sketch-02" src="img/dino-sketch-01.png" alt="">
-                </div>
-            </div>
-            <div class="row">
-                <div class="col-12 bg1"></div>
-            </div>
-            <div class="d-pic">
+            
+            <div class="d-content">
                 <div class="row">
                     <div class="col-12 text-center">
                         <p class="Skranji font-size-48">COMING SOON !</p>
