--- a/aboutus.html
+++ b/aboutus.html
@@ -33,29 +33,31 @@
                 background-repeat: repeat-y;
             }
             .bg1 {
-                top: 0px;
-                left: 0px;
+                /* top: 0px;
+                left: 0px; */
                 width: 100%;
-                height: 1200px;
-                position: absolute;
+                height: 100%;
+                /* height: 1200px; */
+                /* position: absolute;
                 background: transparent url('img/banner-aboutus2.png') 0% 0% no-repeat padding-box;
-                opacity: 1;
+                opacity: 1; */
                 /* background-size: contain; */
             }
             .bg2 {
-                top: 284px;
+                top: 900px;
                 left: 0px;
                 width: 100%;
-                height: 1820px;
+                height: 100%;
                 position: absolute;
-                background: transparent url('img/bg-texturecolor-2.png') 0% 0% no-repeat padding-box;
+                /* background: transparent url('img/bg-texturecolor-2.png') 0% 0% no-repeat padding-box; */
                 opacity: 1;
             }
             .bg3 {
                 top: 1368px;
                 left: 0px;
                 width: 100%;
-                height: 1102px;
+                /* height: 1102px; */
+                height: 100%;
                 position: absolute;
                 background: transparent url('img/image-parkhistory.png') 0% 0% no-repeat padding-box;
                 opacity: 1;
@@ -73,7 +75,7 @@
                 top: 0px;
                 left: 0px;
                 width: 100%;
-                height: 200px;
+                height: 100%;
                 background: transparent url('img/header-gradient.png') 0% 0% no-repeat padding-box;
                 position: absolute;
                 opacity: 1;
@@ -104,7 +106,6 @@
                 font-size: 48px;
             }
             .head-box {
-                margin-top: 1100px;
                 margin-left: 280px;
                 margin-right: 280px;
             }
@@ -149,22 +150,21 @@
                     font-size: 36px;
                 }
                 .head-box {
-                    margin-top: 520px;
-                    margin-left: 0px;
-                    margin-right: 0px;
+                    margin-left: 0px !important;
+                    margin-right: 0px !important;
                 }
                 .text2-box {
                     margin-top: 480px;
-                    margin-left: 0;
-                    margin-right: 0;
+                    margin-left: 0 !important;
+                    margin-right: 0 !important;
                 }
                 .img-foot {
                     margin-bottom: 80px;
                 }
                 .e-group {
                     margin-top: 0 !important;
-                    margin-left: 10px !important;
-                    margin-right: 10px !important;
+                    margin-left: 25px !important;
+                    margin-right: 25px !important;
                 }
             }
             @media screen and (max-width: 600px) {
@@ -181,14 +181,13 @@
                     font-size: 20px !important;
                 }
                 .head-box {
-                    margin-top: 160px !important;
-                    margin-left: 0px;
-                    margin-right: 0px;
+                    margin-left: 0px !important;
+                    margin-right: 0px !important;
                 }
                 .text2-box {
                     margin-top: 230px !important;
-                    margin-left: 0px;
-                    margin-right: 0px;
+                    margin-left: 0px !important;
+                    margin-right: 0px !important;
                 }
                 .text1 {
                     font-size: 16px !important;
@@ -207,31 +206,29 @@
         </style>
     </head>
 <body>
+    <div class="bg2">
+        <img src="img/bg-texturecolor-2.png" alt="" width="100%">
+    </div>
+    <div class="row">
+        <div class="col-12 bg1">
+            <img src="img/banner-aboutus2.png" alt="" width="100%">
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-12 bg3">
+            <img src="img/image-parkhistory.png" alt="" width="100%">
+        </div>
+    </div>
     <header id="page-topbar">
-        <div class="header-gradient"></div>
+        <div class="header-gradient">
+            <img src="img/header-gradient.png" alt="" width="100%">
+        </div>
         <div class="top-bar"></div>
     </header>
     <div id="layout-wrapper">
-        <div class="page-content">
+        <div class="">
             <div class="content-fluid">
-                <div class="row">
-                    <div class="col-12 bg2">
-                    </div>
-                </div>
-                <div class="row">
-                    <div class="col-12 bg1">
-                    </div>
-                </div>
-                <div class="row">
-                    <div class="col-12 bg4">
-                    </div>
-                </div>
-                <div class="row">
-                    <div class="col-12 bg3">
-                    </div>
-                </div>
                 <div class="img-bg">
-                    
                     <div class="row">
                         <div class="col-12">
                             <img class="dino-sketch-02" src="img/dino-sketch-02.png" alt="">
