--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
                 left: 0px;
                 width: 100%;
                 height: 1046px;
+                /* height: 100%; */
                 position: absolute;
                 background: transparent url('img/banner-home2.png') 0% 0% no-repeat padding-box;
                 opacity: 1;
@@ -187,7 +188,11 @@
                 margin-top: 25px;
                 font-size: 36px;
             }
-            @media screen and (max-width: 1024px) {
+            .show-video {
+                width: 560px;
+                height: 315px;
+            }
+            @media screen and (max-width: 1400px) {
                 .head-topic {
                     font-size: 36px;
                 }
@@ -195,7 +200,7 @@
                     font-size: 32px;
                 }
                 .head-box {
-                    margin-top: 500px;
+                    margin-top: 700px !important;
                     margin-left: 0px;
                     margin-right: 0px;
                 }
@@ -210,6 +215,45 @@
                     margin-top: 0 !important;
                     margin-left: 10px !important;
                     margin-right: 10px !important;
+                }
+            }
+            @media screen and (max-width: 1242px) {
+                .head-box {
+                    margin-top: 550px !important;
+                    margin-left: 0px;
+                    margin-right: 0px;
+                }
+            }
+            @media screen and (max-width: 1024px) {
+                .head-topic {
+                    font-size: 36px;
+                }
+                .second-topic {
+                    font-size: 32px;
+                }
+                .head-box {
+                    margin-top: 500px !important;
+                    margin-left: 0px;
+                    margin-right: 0px;
+                }
+                .text2-box {
+                    margin-left: 0;
+                    margin-right: 0;
+                }
+                .img-foot {
+                    margin-bottom: 80px !important;
+                }
+                .e-group {
+                    margin-top: 0 !important;
+                    margin-left: 10px !important;
+                    margin-right: 10px !important;
+                }
+            }
+            @media screen and (max-width: 820px) {
+                .head-box {
+                    margin-top: 420px !important;
+                    margin-left: 0px;
+                    margin-right: 0px;
                 }
             }
             @media screen and (max-width: 600px) {
@@ -247,6 +291,10 @@
                 .content-box {
                     margin-top: 1.5rem;
                 }
+                .show-video {
+                    width: 100%;
+                    height: 100%;
+                }
             }
             
         </style>
@@ -265,10 +313,6 @@
                 </div>
                 <div class="row">
                     <div class="col-12 bg1">
-                    </div>
-                </div>
-                <div class="row">
-                    <div class="col-12 bg4">
                     </div>
                 </div>
                 <div class="row">
@@ -315,7 +359,7 @@
                 
                 <div class="row head-box">
                     <div class="col-md-12 col-sm-12 text-center">
-                        <iframe width="560" height="315" src="https://www.youtube.com/embed/P45g-aLCOqA?si=5aBg1n9s4F672KU9" title="YouTube video player" 
+                        <iframe class="show-video" src="https://www.youtube.com/embed/P45g-aLCOqA?si=5aBg1n9s4F672KU9" title="YouTube video player" 
                             frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen>
                         </iframe>
                     </div>
